# ros2_template

./: .gitignore  CMakeLists.txt  README.MD  package.xml
.vscode_config/: launch.json  settings.json  tasks.json
config/: params.yaml
launch/: publisher.launch.py
rviz/: config.rviz
src/executables/: talker.cpp
src/nodes/: CMakeLists.txt
src/nodes/publisher/: CMakeLists.txt  MinimalPublisher.cpp  MinimalPublisher.hpp
